--- a/configdialog.ui
+++ b/configdialog.ui
@@ -13,6 +13,12 @@
     <height>328</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>253</width>
+    <height>328</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>配置</string>
   </property>
