--- a/configdialog.ui
+++ b/configdialog.ui
@@ -10,13 +10,19 @@
     <x>0</x>
     <y>0</y>
     <width>253</width>
-    <height>328</height>
+    <height>389</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>253</width>
-    <height>328</height>
+    <height>389</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>253</width>
+    <height>389</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -32,103 +38,30 @@
    <property name="geometry">
     <rect>
      <x>90</x>
-     <y>270</y>
+     <y>330</y>
      <width>75</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>确定</string>
+    <string>确认配置</string>
    </property>
   </widget>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>10</y>
+     <y>70</y>
      <width>201</width>
      <height>241</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="1" alignment="Qt::AlignHCenter">
-     <widget class="QLabel" name="label_9">
-      <property name="text">
-       <string>端口</string>
-      </property>
-     </widget>
+    <item row="8" column="1">
+     <widget class="QComboBox" name="comboBox81"/>
     </item>
-    <item row="0" column="2" alignment="Qt::AlignHCenter">
-     <widget class="QLabel" name="label_10">
-      <property name="text">
-       <string>波特率</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0" alignment="Qt::AlignHCenter">
-     <widget class="QLabel" name="label_1">
-      <property name="text">
-       <string>COM1</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QComboBox" name="comboBox11"/>
-    </item>
-    <item row="1" column="2">
-     <widget class="QComboBox" name="comboBox12"/>
-    </item>
-    <item row="2" column="0" alignment="Qt::AlignHCenter">
-     <widget class="QLabel" name="label_2">
-      <property name="text">
-       <string>COM2</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="1">
-     <widget class="QComboBox" name="comboBox21"/>
-    </item>
-    <item row="2" column="2">
-     <widget class="QComboBox" name="comboBox22"/>
-    </item>
-    <item row="3" column="0" alignment="Qt::AlignHCenter">
-     <widget class="QLabel" name="label_3">
-      <property name="text">
-       <string>COM3</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="1">
-     <widget class="QComboBox" name="comboBox31"/>
-    </item>
-    <item row="3" column="2">
-     <widget class="QComboBox" name="comboBox32"/>
-    </item>
-    <item row="4" column="0" alignment="Qt::AlignHCenter">
-     <widget class="QLabel" name="label_4">
-      <property name="text">
-       <string>COM4</string>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="1">
-     <widget class="QComboBox" name="comboBox41"/>
-    </item>
-    <item row="4" column="2">
-     <widget class="QComboBox" name="comboBox42"/>
-    </item>
-    <item row="5" column="0" alignment="Qt::AlignHCenter">
-     <widget class="QLabel" name="label_5">
-      <property name="text">
-       <string>COM5</string>
-      </property>
-     </widget>
-    </item>
-    <item row="5" column="1">
-     <widget class="QComboBox" name="comboBox51"/>
-    </item>
-    <item row="5" column="2">
-     <widget class="QComboBox" name="comboBox52"/>
+    <item row="6" column="1">
+     <widget class="QComboBox" name="comboBox61"/>
     </item>
     <item row="6" column="0" alignment="Qt::AlignHCenter">
      <widget class="QLabel" name="label_6">
@@ -137,11 +70,62 @@
       </property>
      </widget>
     </item>
-    <item row="6" column="1">
-     <widget class="QComboBox" name="comboBox61"/>
+    <item row="5" column="1">
+     <widget class="QComboBox" name="comboBox51"/>
     </item>
-    <item row="6" column="2">
-     <widget class="QComboBox" name="comboBox62"/>
+    <item row="5" column="0" alignment="Qt::AlignHCenter">
+     <widget class="QLabel" name="label_5">
+      <property name="text">
+       <string>COM5</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="1">
+     <widget class="QComboBox" name="comboBox41"/>
+    </item>
+    <item row="4" column="0" alignment="Qt::AlignHCenter">
+     <widget class="QLabel" name="label_4">
+      <property name="text">
+       <string>COM4</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1">
+     <widget class="QComboBox" name="comboBox31"/>
+    </item>
+    <item row="3" column="0" alignment="Qt::AlignHCenter">
+     <widget class="QLabel" name="label_3">
+      <property name="text">
+       <string>COM3</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1">
+     <widget class="QComboBox" name="comboBox21"/>
+    </item>
+    <item row="2" column="0" alignment="Qt::AlignHCenter">
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string>COM2</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QComboBox" name="comboBox11"/>
+    </item>
+    <item row="1" column="0" alignment="Qt::AlignHCenter">
+     <widget class="QLabel" name="label_1">
+      <property name="text">
+       <string>COM1</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1" alignment="Qt::AlignHCenter">
+     <widget class="QLabel" name="label_9">
+      <property name="text">
+       <string>端口</string>
+      </property>
+     </widget>
     </item>
     <item row="7" column="0" alignment="Qt::AlignHCenter">
      <widget class="QLabel" name="label_7">
@@ -153,9 +137,6 @@
     <item row="7" column="1">
      <widget class="QComboBox" name="comboBox71"/>
     </item>
-    <item row="7" column="2">
-     <widget class="QComboBox" name="comboBox72"/>
-    </item>
     <item row="8" column="0" alignment="Qt::AlignHCenter">
      <widget class="QLabel" name="label_8">
       <property name="text">
@@ -163,13 +144,20 @@
       </property>
      </widget>
     </item>
-    <item row="8" column="1">
-     <widget class="QComboBox" name="comboBox81"/>
-    </item>
-    <item row="8" column="2">
-     <widget class="QComboBox" name="comboBox82"/>
-    </item>
    </layout>
+  </widget>
+  <widget class="QPushButton" name="btn_auto_config">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>20</y>
+     <width>91</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>读取配置文件</string>
+   </property>
   </widget>
  </widget>
  <resources/>
