--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,8 +18,8 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>1000000</width>
-    <height>1000000</height>
+    <width>952</width>
+    <height>534</height>
    </size>
   </property>
   <property name="windowTitle">
