--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,19 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>952</width>
-    <height>534</height>
+    <height>564</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>952</width>
-    <height>534</height>
+    <height>564</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>952</width>
-    <height>534</height>
+    <height>564</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -45,7 +45,7 @@
       <x>16</x>
       <y>49</y>
       <width>921</width>
-      <height>471</height>
+      <height>501</height>
      </rect>
     </property>
     <property name="currentIndex">
@@ -61,7 +61,7 @@
         <x>10</x>
         <y>10</y>
         <width>421</width>
-        <height>221</height>
+        <height>251</height>
        </rect>
       </property>
       <property name="title">
@@ -122,12 +122,44 @@
         <string>0</string>
        </property>
       </widget>
+      <widget class="QRadioButton" name="radio_ascii_11">
+       <property name="geometry">
+        <rect>
+         <x>290</x>
+         <y>220</y>
+         <width>51</width>
+         <height>19</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>ASCII</string>
+       </property>
+       <attribute name="buttonGroup">
+        <string notr="true">buttonGroup</string>
+       </attribute>
+      </widget>
+      <widget class="QRadioButton" name="radio_hex_11">
+       <property name="geometry">
+        <rect>
+         <x>350</x>
+         <y>220</y>
+         <width>51</width>
+         <height>19</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>HEX</string>
+       </property>
+       <attribute name="buttonGroup">
+        <string notr="true">buttonGroup</string>
+       </attribute>
+      </widget>
      </widget>
      <widget class="QGroupBox" name="groupBox_12">
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>240</y>
+        <y>270</y>
         <width>421</width>
         <height>191</height>
        </rect>
@@ -284,6 +316,38 @@
        <property name="text">
         <string>0</string>
        </property>
+      </widget>
+      <widget class="QRadioButton" name="radio_ascii_12">
+       <property name="geometry">
+        <rect>
+         <x>290</x>
+         <y>160</y>
+         <width>51</width>
+         <height>19</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>ASCII</string>
+       </property>
+       <attribute name="buttonGroup">
+        <string notr="true">buttonGroup_2</string>
+       </attribute>
+      </widget>
+      <widget class="QRadioButton" name="radio_hex_12">
+       <property name="geometry">
+        <rect>
+         <x>350</x>
+         <y>160</y>
+         <width>51</width>
+         <height>19</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>HEX</string>
+       </property>
+       <attribute name="buttonGroup">
+        <string notr="true">buttonGroup_2</string>
+       </attribute>
       </widget>
      </widget>
      <widget class="QGroupBox" name="groupBox_21">
@@ -1922,4 +1986,8 @@
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
  <connections/>
+ <buttongroups>
+  <buttongroup name="buttonGroup"/>
+  <buttongroup name="buttonGroup_2"/>
+ </buttongroups>
 </ui>
