--- a/configdialog.ui
+++ b/configdialog.ui
@@ -21,8 +21,8 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>253</width>
-    <height>389</height>
+    <width>10000</width>
+    <height>10000</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -39,12 +39,12 @@
     <rect>
      <x>90</x>
      <y>330</y>
-     <width>75</width>
+     <width>61</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>确认配置</string>
+    <string>确认</string>
    </property>
   </widget>
   <widget class="QWidget" name="layoutWidget">
@@ -149,7 +149,7 @@
   <widget class="QPushButton" name="btn_auto_config">
    <property name="geometry">
     <rect>
-     <x>80</x>
+     <x>20</x>
      <y>20</y>
      <width>91</width>
      <height>31</height>
@@ -157,6 +157,19 @@
    </property>
    <property name="text">
     <string>读取配置文件</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btn_save_config">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>20</y>
+     <width>91</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>保存配置</string>
    </property>
   </widget>
  </widget>
