--- a/configdialog.ui
+++ b/configdialog.ui
@@ -37,9 +37,9 @@
   <widget class="QPushButton" name="btn_ok">
    <property name="geometry">
     <rect>
-     <x>100</x>
+     <x>80</x>
      <y>330</y>
-     <width>61</width>
+     <width>91</width>
      <height>31</height>
     </rect>
    </property>
@@ -50,9 +50,9 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>30</x>
      <y>70</y>
-     <width>211</width>
+     <width>191</width>
      <height>241</height>
     </rect>
    </property>
@@ -169,7 +169,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>保存配置</string>
+    <string>写入配置文件</string>
    </property>
   </widget>
  </widget>
