--- a/res.qrc
+++ b/res.qrc
@@ -5,5 +5,6 @@
     </qresource>
     <qresource prefix="/translators">
         <file>cn.qm</file>
+        <file>en.qm</file>
     </qresource>
 </RCC>
